k8s/pragna-api-staging/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-pragna
  namespace: pragna-api-staging
spec:
  stripPrefix:
    prefixes:
      - /pragna
