k8s/pragna-api-staging/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pragna-api
  namespace: pragna-api-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pragna-api
  template:
    metadata:
      labels:
        app: pragna-api
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: pragna-api
          image: ghcr.io/sgummalla79/pragna-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 4
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 30
            failureThreshold: 3
